Newsletter custom block with modal option

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -52,12 +52,12 @@ $unpub                     : $pink;
 $headerBack                : $offWhite;
 $footerBack                : $darkGrey;
 $footerText                : $offWhite;
-$footerLink                : $grey;
-$footerLinkHover           : $white;
+$footerLink                : $gold;
+$footerLinkHover           : $whiteGold;
 $footerIcon                : $footerLink;
 $footerIconHover           : $footerLinkHover;
 $borderRule                : $lightBlack;
-$modalBack                 : $transBlack;
+$modalBack                 : $transGrey;
 $modalContent              : $baseText;
 $modalContentBack          : $siteBack;
 $modalHeader               : $white;
