--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -114,7 +114,7 @@
 
 	{% block pageFooter %}
 		{% if page.footer %}
-			<footer role="contentinfo" class="{{ styles.footer }} {{ styles.newsletterDisplay }}">
+			<footer role="contentinfo">
 				<div class="footer-inner">
 					{{ page.footer }}
 				</div>
