Social media links block

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -50,12 +50,14 @@ $cautionTextHover  : $black;
 $siteBack                  : $white;
 $unpub                     : $pink;
 $headerBack                : $offWhite;
-$footerBack                : $darkGrey;
+$prefooterBack             : $darkGrey;
+$prefooterText             : $offWhite;
+$prefooterLink             : $gold;
+$prefooterLinkHover        : $whiteGold;
+$footerBack                : $black;
 $footerText                : $offWhite;
 $footerLink                : $gold;
 $footerLinkHover           : $whiteGold;
-$footerIcon                : $footerLink;
-$footerIconHover           : $footerLinkHover;
 $borderRule                : $lightBlack;
 $modalBack                 : $transGrey;
 $modalContent              : $baseText;
