--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -107,7 +107,9 @@
 	{% block pagePreFooter %}
 		{% if page.prefooter %}
 			<section role="prefooter" class="prefooter">
-				{{ page.prefooter }}
+				<div class="prefooter-inner">
+					{{ page.prefooter }}
+				</div>
 			</section>
 		{% endif %}
 	{% endblock %}
