--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/_field.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/_field.scss
@@ -19,3 +19,22 @@
 		@include clearFix;
 	}
 }//end field
+
+/* SOCIAL MEDIA LINKS FIELD
+-------------------- */
+.field-platforms{
+	margin-bottom: -$spaceXxs;
+	.platform-links{
+		@include listReset;
+		@include safeFlex(row,wrap,start,start);
+		@include bleed(padding,10px);
+		li{
+			margin-bottom: $spaceXxs;
+		}
+		a{
+			font-size: $socialIcons;
+		}
+	}//end platform links
+}//end field platforms
+
+
