--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/_field.twig
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/_field.twig
@@ -6,52 +6,56 @@
   {# multi block with no label #}
   {%- if multiple -%}
     {% block fieldMultiNoClasses %}
-    <div{{ attributes.addClass(classes) }}>
+      <div{{ attributes.addClass(classes) }}>
+        {% block fieldMultiNoItems %}
+          {%- for item in items -%}
+            <div{{ item.attributes }}>
+              {% block fieldMultiNo %}
+                {{- item.content -}}
+              {% endblock %}
+            </div>
+          {%- endfor -%}
+        {% endblock %}
+      </div>
     {% endblock %}
-        {%- for item in items -%}
-          <div{{ item.attributes }}>
-            {% block fieldMultiNo %}
-              {{- item.content -}}
-            {% endblock %}
-          </div>
-        {%- endfor -%}
-    </div>
   {# single block with no label #}
   {%- else -%}
     {% block fieldSingleNoClasses %}
-    <div{{ attributes.addClass(classes) }}>
-    {% endblock %}
-      {%- for item in items -%}
-        {% block fieldSingleNo %}
-          {{- item.content -}}
+      <div{{ attributes.addClass(classes) }}>
+        {% block fieldSingleNoItems %}
+          {%- for item in items -%}
+            {% block fieldSingleNo %}
+              {{- item.content -}}
+            {% endblock %}
+          {%- endfor -%}
         {% endblock %}
-      {%- endfor -%}
-    </div>
+      </div>
+    {% endblock %}
   {%- endif -%}
 {%- else -%}
   {# block with label #}
   {% block fieldLabelClasses %}
-  <div{{ attributes.addClass(classes) }}>
-  {% endblock %}
-    {%- if (label_display == 'inline') -%}
-      <span class="inline-label">{{- label -}}:</span>
-    {% elseif (label_display == 'visually_hidden') %}
-      <div class="label visually-hidden">{{- label -}}</div>
-    {%- else -%}
-      <div class="label">{{- label -}}</div>
-    {%- endif -%}
-    {%- if multiple -%}
-      <div class="field-multi-item">
-    {%- endif -%}
-    {% block fieldLabel %}
-      {%- for item in items -%}
-        <div{{- item.attributes -}}>
-          {{- item.content -}}
+    <div{{ attributes.addClass(classes) }}>
+      {%- if (label_display == 'inline') -%}
+        <span class="inline-label">{{- label -}}:</span>
+      {% elseif (label_display == 'visually_hidden') %}
+        <div class="label visually-hidden">{{- label -}}</div>
+      {%- else -%}
+        <div class="label">{{- label -}}</div>
+      {%- endif -%}
+      {%- if multiple -%}
+        <div class="field-multi-item">
+      {%- endif -%}
+      {% block fieldLabel %}
+        {%- for item in items -%}
+          <div{{- item.attributes -}}>
+            {{- item.content -}}
+          </div>
+        {%- endfor -%}
+      {% endblock %}
+      {%- if multiple -%}
         </div>
-      {%- endfor -%}
-    {% endblock %}
-    {%- if multiple -%}
-      </div>
-    {%- endif -%}
-  </div>
+      {%- endif -%}
+    </div>
+  {% endblock %}
 {%- endif -%}
