--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
@@ -1,14 +1,14 @@
 /* =============
    SITE FOOTER
 =============== */
-footer {
-	background: $footerBack;
-	color: $footerText;
+
+.prefooter{
+	background: $prefooterBack;
+	color: $prefooterText;
 	.modal-content{
 		color: $baseText;
 	}
-	//set style for footer (need inner for fixed footer script)
-	.footer-inner{
+	.prefooter-inner{
 		min-height: 289px;
 		padding: 30px $siteMarginMobile;
 		max-width: $contentStop + 40px;
@@ -36,7 +36,50 @@ footer {
 					}
 				}
 			}
-		}//end footer-inn > div
+		}//end prefooter-inner > div
+	}//end prefooter inner
+}//end prefooter
+
+
+footer {
+	background: $footerBack;
+	color: $footerText;
+	.modal-content{
+		color: $baseText;
+	}
+	//set style for footer (need inner for fixed footer script)
+	.footer-inner{
+		min-height: 289px;
+		padding: 30px $siteMarginMobile;
+		max-width: $contentStop + 40px;
+		@include auto;
+		position: relative;
+		@include tab{
+			padding: 20px $siteMarginMobile;
+			min-height: 0;
+		}
+
+		//limit footer content to max-width and set flex parenting
+		& > div{
+			@include safeFlex(row,wrap,justify,center);
+			@include tab{
+				@include bleed(padding,40px);
+			}
+			& > *{
+				&:not(:last-child){
+					margin-bottom: $spaceMd;
+					@include tab{
+						margin-bottom: 0;
+					}
+				}
+				h2.block-title{
+					margin-bottom: 1.5rem;
+					@include tab{
+						text-align: left;
+					}
+				}
+			}
+		}//end prefooter-inner > div
 	}//end footer-inner
 }//end footer
 
