--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/social-platforms/_field-platforms.twig
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/05-field/social-platforms/_field-platforms.twig
@@ -9,17 +9,17 @@
 #}
 
 {% if 'facebook' in url %}
-  {% set platformSafe, platform, platformIcon = 'facebook', 'Facebook', 'facebook-square' %}
+  {% set platformSafe, platform, platformIcon = 'facebook', 'Facebook', 'fab fa-facebook-square' %}
 {% elseif 'twitter' in url %}
-  {% set platformSafe, platform, platformIcon = 'twitter', 'Twitter', 'twitter-square' %}
+  {% set platformSafe, platform, platformIcon = 'twitter', 'Twitter', 'fab fa-twitter-square' %}
 {% elseif 'linkedin' in url %}
-  {% set platformSafe, platform, platformIcon = 'linkedin', 'LinkedIn', 'linkedin' %}
+  {% set platformSafe, platform, platformIcon = 'linkedin', 'LinkedIn', 'fab fa-linkedin' %}
 {% elseif 'youtube' in url %}
-  {% set platformSafe, platform, platformIcon = 'youtube', 'Youtube', 'youtube-square' %}
+  {% set platformSafe, platform, platformIcon = 'youtube', 'Youtube', 'fab fa-youtube-square' %}
 {% elseif 'pinterest' in url %}
-  {% set platformSafe, platform, platformIcon = 'pinterest', 'Pinterest', 'pinterest-square' %}
+  {% set platformSafe, platform, platformIcon = 'pinterest', 'Pinterest', 'fab fa-pinterest-square' %}
 {% else %}
-  {% set platformSafe, platform, platformIcon = 'generic', 'Unsupported sharing link', 'share-alt-square' %}
+  {% set platformSafe, platform, platformIcon = 'generic', 'Unsupported sharing link', 'fas fa-share-alt-square' %}
 {% endif %}
 
-<li><a href="{{ url }}" target="_blank" class="{{ platformSafe }}" aria-label="{{ platform }}" rel="noonopener noreferrer"><i class="fab fa-{{ platformIcon }}"></i></a></li>
+<li><a href="{{ url }}" target="_blank" class="{{ platformSafe }}" aria-label="{{ platform }}" rel="noonopener noreferrer"><i class="{{ platformIcon }}"></i></a></li>
