--- a/web/themes/citizen_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-widgets.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-widgets.html.twig
@@ -45,8 +45,10 @@ set classes = [
 %}
 
 <div{{ attributes.addClass(classes) }}>
-	{%- for item in items -%}
-		{{- item.content -}}
-	{%- endfor -%}
+	<div class="section-wrapper">
+		{%- for item in items -%}
+			{{- item.content -}}
+		{%- endfor -%}
+	</div>
 </div>
 
