Remove locally hosted fontawesome since doesnt work with styleguide

--- a/web/themes/citizen_patterns/components/_meta/_00-head.twig
+++ b/web/themes/citizen_patterns/components/_meta/_00-head.twig
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/pattern-scaffolding.css?{{ cacheBuster }}" media="all" />
     <link rel="stylesheet" href="../../../../dist/style.css?{{ cacheBuster }}" media="all" />
     <link rel="stylesheet" href="../../js/select2/select2.min.css?{{ cacheBuster }}" media="all" />
-
+    <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     {{ patternLabHead | raw }}
     <!-- End Pattern Lab -->
