--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/_html.twig
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/_html.twig
@@ -55,6 +55,7 @@
 			<meta name="msapplication-TileColor" content="#da532c">
 			<meta name="msapplication-config" content="/themes/citizen_patterns/favicons/browserconfig.xml">
 			<meta name="theme-color" content="#ffffff">
+			<script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
 	<body {{ attributes.addClass(body_classes) }}>
