Font awesome mixins.

--- a/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -179,8 +179,9 @@
 	content: "#{$iconCode}";
 }
 
-@mixin faBrand($iconCode){
+@mixin faBrand($iconCode,$iconSize){
 	font-family: 'Font Awesome 5 Brands';
+	font-size: $iconSize;
 	content: '\#{$iconCode}';
 }
 
