--- a/web/themes/citizen_patterns/components/_meta/_00-head.twig
+++ b/web/themes/citizen_patterns/components/_meta/_00-head.twig
@@ -26,10 +26,10 @@
           <a href="#" class="nav-group-link" data-group-target="materials">Materials</a>
         </li>
         <li class="group-nav-item">
-          <a href="#" class="nav-group-link" data-group-target="materials">Parts</a>
+          <a href="#" class="nav-group-link" data-group-target="parts">Parts</a>
         </li>
         <li class="group-nav-item parent-group">
-          <a href="#" class="nav-group-link" data-group-target="materials">Chunks</a>
+          <a href="#" class="nav-group-link" data-group-target="chunks">Chunks</a>
           <ul class="sub-group-patterns">
             <li class="sub-group-nav-item">
               <a href="#" class="sub-nav-group-link" data-group-target="navigation">Navigation</a>
