--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.twig
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.twig
@@ -1,1 +1,16 @@
+{#
+  STYLEGUIDE ONLY: This template is not brought into to Drupal.
+#}
 
+<div class="constrain-text">
+	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
+
+	{% for listItem in listItems.two %}
+		<p>{{ listItem.description }}</p>
+	{% endfor %}
+	<hr>
+	{% for listItem in listItems.two %}
+		<p>{{ listItem.excerpt.long }}</p>
+	{% endfor %}
+
+</div>
