--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.twig
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.twig
@@ -5,7 +5,7 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-	{% for listItem in listItems.two %}
+	{% for listItem in listItems.one %}
 		<p>{{ listItem.description }}</p>
 	{% endfor %}
 	<hr>
