--- a/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/01-header/site-header.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/01-header/site-header.twig
@@ -9,7 +9,7 @@
 <div class="layout-container pl-spacer">
 {% endblock %}
 
-<header role="banner" class="nav-{{ styles.mainNavStyle }}">
+<header role="banner">
   <div>
 
 		{% include "@composites/01-blocks/01-branding/branding.twig" 
