--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/_site-styles.scss
@@ -46,6 +46,14 @@ body {
 
 /* ADMIN TOOLBAR
 ------------------ */
+#toolbar-bar{
+	button{
+		margin-bottom: 0;
+	}
+	.toolbar-vertical &{
+		max-height: 39px;
+	}
+}
 .toolbar-tray-horizontal{
 	.menu-item--expanded{
 		background: none;
@@ -363,42 +371,6 @@ body {
 		}
 	}
 }//end slick-slider
-
-
-/* MESSAGING
------------------ */
-.drupal-message {
-	padding: $spaceMd 20px $spaceMd 45px;
-	margin: $spaceMd 0;
-	background-repeat: no-repeat;
-	background-position: 12px center;
-	background-size: 20px 20px;
-	font-size: 1.8rem;
-	background-color: $messageBack;
-	color: $messageText;
-	border-left: 10px solid;
-	box-shadow: none;
-	max-width: $contentStop;
-	@include auto;
-	a{
-		color: $gold;
-		&:hover,&:focus{
-			opacity: .6;
-		}
-	}
-	&.error-message{
-		border-color: $messageErrorBorder;
-		background-image: url($messageErrorIcon);
-	}
-	&.warning-message{
-		border-color: $messageWarningBorder;
-		background-image: url($messageWarningIcon);
-	}
-	&.status-message{
-		border-color: $messageGoodBorder;
-		background-image: url($messageGoodIcon);
-	}
-}
 
 /* RESPONSIVE PREVIEW
 ------------------------- */
