--- a/web/themes/citizen_patterns/components/_meta/_00-head.twig
+++ b/web/themes/citizen_patterns/components/_meta/_00-head.twig
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../../js/slick/slick-theme.css?{{ cacheBuster }}" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
+    <noscript>
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?{{ cacheBuster }}" media="all" />
+    </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     {{ patternLabHead | raw }}
     <!-- End Pattern Lab -->
