--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/03-superfish/_superfish-block.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/03-superfish/_superfish-block.twig
@@ -2,25 +2,24 @@
  Drupal: This file is embedded in the site-header.twig pattern lab file and in the superfish main Drupal block. Menu alignment macros define the position in the header: left, right, center.
 #}
 
-{% import "@base/macros.twig" as styles %}
-{% extends "@chunks/01-navigation/01-superfish/superfish.twig" %}
-
-{% block superhide_start %}{# hide pl-only content #}{% endblock %}
 		 
-	{% block superfish_main %}
-		<div id="block-citizen-patterns-mainnavigation" class="contextual-region block block-superfishmain {{ styles.mainNavStyle }}">
-			{% block superfish_content %}
-				{% block superfish_mobile %}
-					<div class="sf-accordion-toggle sf-style-none">
-						<a id="superfish-main-toggle" href="#">
-							<span>Main Navigation</span>
-						</a>
-					</div>	
-				{% endblock %}
-				{{ parent() }}
+{% block sfMainBlock %}
+	<div id="block-citizen-patterns-mainnavigation" class="block block-superfishmain">
+		<a id="main-navigation"></a>
+		{% block sfContent %}
+			{# need to add this for superfish in pl because the bars icon does not work as pseudo css element and because its added via the superfish JS in Drupal, we can't jsut extend it over to the Drupal block #}
+			{% block plMobileToggle %}
+				<div class="sf-accordion-toggle sf-style-none">
+					<a id="superfish-main-toggle" href="#" aria-label="expand">
+						<i class="fas fa-bars"></i>
+					</a>
+				</div>	
 			{% endblock %}
-		</div>
-	{% endblock %}
+			{% block sfMenuContent %}
+				{# menu content goes here#}	
+			{% endblock %}
+		{% endblock %}
+	</div>
+{% endblock %}
 			
 
-{% block superhide_end %}{# hide pl-only content #}{% endblock %}
