--- a/web/themes/citizen_patterns/templates/zzz-custom/blocks/menus/block--superfish--main.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/blocks/menus/block--superfish--main.html.twig
@@ -26,9 +26,8 @@
  */
 #}
 {% extends "@composites/01-blocks/03-superfish/_superfish-block.twig" %}
-
+{% block plMobileToggle %}{% endblock %}
 {# replace the dummy pattern lab content with the actual superfish content #}
-{% block superfish_content %}
-	<a id="main-navigation"></a>
+{% block sfMenuContent %}
 	{{ content }}
 {% endblock %}
